# chess-engine

./: CMakeLists.txt  LICENSE  README.md  board.cpp  board.h  main.cpp  mainwindow.cpp  mainwindow.h  movegen.cpp  movegen.h  promotionpopup.cpp  promotionpopup.h
untitled/: CMakeLists.txt  main.cpp
